<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:orientation="horizontal">

        <android.widget.ImageButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main"
            android:src="@drawable/back_arrow_resize"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/appName"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp" />

        <android.widget.Button
            android:id="@+id/notButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main"
            android:text="" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:srcCompat="@drawable/ic_launcher_background"
                android:contentDescription="@string/productPicture" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productName"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:background="@color/grey"
                android:layout_marginTop="3dp"
                android:padding="5dp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/ic_launcher_background"
                android:contentDescription="@string/barcode" />

            <TextView
                android:id="@+id/productDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:layout_marginTop="3dp"
                android:text="@string/productDetail"
                android:textColor="@color/black"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="구매자\n구매 날짜\n유효 기한"
                android:textColor="@color/black"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:srcCompat="@drawable/ic_launcher_background"
                android:contentDescription="@string/advertisement" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>