<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:orientation="horizontal">

        <android.widget.ImageButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minHeight="48dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/appName"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp" />

        <android.widget.ImageButton
            android:id="@+id/my_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main"
            android:text=""
            android:src="@drawable/user_20_resize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/main"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/depoponlogo"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/ad"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:text="★광고☆"
            android:textSize="70sp"
            android:textColor="@color/black"
            android:gravity="center"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/dpp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo" />
</LinearLayout>